<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">GIETGuide</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="todo22">TODO</string>
    <string name="todo23">TODO</string>
    <string name="todo24">TODO</string>
    <string name="todo25">TODO</string>
    <string name="todo31">TODO</string>
    <string name="todo92">TODO</string>
    <string name="user"> No account yet ? Create one </string>
    <string name="user1"> Already a member ! Login </string>
    <string name="register"> Register</string>
    <string name="login"> Login </string>
    <string name="a11"> UNIVERSITY </string>
    <string name="a12"> The Biju Patnaik University of Technology ( BPUT ), Orissa, with its head-quarters in Rourkela came into being in November 2002 through an act of the Government. The main objective of instituting the University was to ensure a high quality of students coming out of the technical colleges through a common curriculum and uniform evaluation. Today, the University has 137 colleges, both constituent and affiliated, with around 100,000 students. The disciplines include engineering and architecture, business management, computer studies and pharmacy. Several of these offer both undergraduate and post graduate studies.\n\n
                        The Biju Patnaik University of Technology took its birth in the year 2003 with the laying of foundation stone on the auspicious hand of late Dr.A.P.J. Abdul Kalam, the hon’ble President of India. Riding on the chariot of Public-Private Partnership, the University has grown to-day to a big family of 137 colleges and covers all gamut of technical education systems of the country. To-day it is a proud university who offers Ph.D, Master Degree and Undergraduate Degrees in the areas of engineering, management, pharmacy, architecture, planning and many more. To-day it dreams to introduce B-Voc, M-Voc, and Ph.D-Voc to become an effective partner in the national mission skill development. The unique ICT based training programs of the university to reach the unreached is one of the steps out of many of its initiatives of Digital BPUT. In the changing scenario, the university has adopted a model of PPIP(Public-private-Industry-partnership) to make the education more meaningful and relevant, The Unique student and industry friendly unique curriculum of the university introduced recently will help the students and industry to meet the expectations.\n\n
                        The university believes in “Think Good, Do Good, Be Good “ philosophy and offers education as a service but not as a business. The dynamic model adopted in the university to growing towards its goal for quality in technical education and also provides a true platform to students for quality learning .the big-Dream of the university along with the qualified faculty member, skilled staff and excellent infrastructure make the university the most sought for place of technical education.
                        </string>
    <string name="a13"> RECOGNITIONS </string>
    <string name="a14"> AICTE,New Delhi,India </string>
    <string name="a15"> BPUT, Rourkela, Odisha </string>
    <string name="a16"> SCTE &amp; VT, Bhubaneswar, Odisha </string>
    <string name="a17"> VISION </string>
    <string name="a18"> MISSION </string>
    <string name="a19"> (a) To be a world class brand name for providing technical man power needed in industry and academia.\n\n
                        (b) To create wealth and prosperity in the society through application of technical knowledge. </string>
    <string name="a20" tools:ignore="TypographyOther"> (a) Facilitate making the places of teaching intellectually stimulating and emotionally pleasurable for the students and faculty.\n\n
                        (b) Ensure proficiency in students in their domain of study as well as in soft skills (IT and Communicative English).\n\n
                        (c) Establish world class Centres in Higher Studies and Research. </string>
    <string name="a21"> EXAM INFO. </string>
    <string name="a22"> http://www.bput.ac.in </string>
    <string name="a23"> http://www.bputexam.in </string>
    <string name="btech"> B.Tech </string>
    <string name="btech1">  (1) Computer Science &amp; Engineering\n\n
                            (2) Civil Engineering\n\n
                            (3) Mechanical Engineering\n\n
                            (4) Electrical Engineering\n\n
                            (5) Electrical &amp; Electronics Engineering\n\n
                            (6) Electronics &amp; Communication Engineering</string>
    <string name="mtech">M.Tech</string>
    <string name="mtech1">  (1) Communication System Engineering\n\n
                            (2) Mechanical System &amp; Design\n\n
                            (3) Power Electronics &amp; Drives\n\n
                            (4) Structural Engineering</string>
    <string name="diploma"> Diploma</string>
    <string name="diploma1">    (1) Civil Engineering\n\n
                                (2) Electrical Engineering\n\n
                                (3) Mechanical Engineering</string>
    <string name="pub"> Research Publications </string>
    <string name="pub1"> Office of Dean, R &amp; D oversees all the research activities of the institute and monitors the M.Phil, M.Tech and Ph.D research programs pursued by the faculty members under different universities and mentors the publications by them. A few of the good publications made by the Faculty Members and students are: </string>
    <string name="pub2"> Prof.Dr. B Pradhan </string>
    <string name="pub3">    Das R.R. and Pradhan, B., 2012, â€ÂModelling and simulation of delamination damages in analysis of laminated FRP composite made bonded tabular single lap jointsâ€Â, Procedia Engineering,38, pp.32–39 \n\n
                            Das R.R. and Pradhan,B â€œFinite Element based Delamination damage analysis of laminated FRP composite made bonded tabular socket joint,â€Â International Conference on Manufacturing Excellence, Amity University ,New Delhi, March 29-30,2012 Das, R .R. and Pradhan, B., â€œstress analysis of bonded tabular single lap joints made with functionally graded materials using finite element method,â€Â Third Asian Conference on Mechanics of Functional Materials and Structures, IIT Delhi, New Delhi, December 5- 8,2012.pp.453-456\n\n
                            Das, R .R. and Pradhan, B., Finite element method based stress analysis of bonded tabular socket joints made with functionally graded materialsâ€Â, Fourth International Congress on Computational Mechanics and Simulation, IIT Hyderabad, Hyderabad, December 9-12,2012.pp.453-456</string>
    <string name="pub4"> Prof. (Dr.) Binayak Sahu </string>
    <string name="pub5"> "Signal Transmission in Optical networks" , "VSRD International Journal of Electrical and Electronics Engineering"</string>
    <string name="pub6"> Prof.(Dr.)Sambit Mishra </string>
    <string name="pub7">    (1) Mishra Sambit Kumar , Pattnaik Srikanta( Dr.), Average sum of plans in distributed query processing, IJCSI Journal, ISSN : 1694–0814, 2010\n\n
                            (2) Mishra Sambit Kumar , Pattnaik Srikanta( Dr.), Evaluation of cost of plans in Multiple dependent queries execution using G.A. Techniques, IACSIT International Journal of Engineering and Technology, ISSN : 1793-8236, 2011\n\n
                            (3) Mishra Sambit Kumar, Pattnaik Srikanta(Dr.), Retrieval of association degree between queries in multiple heterogeneous query processing Using Genetic Algorithm techniques, Journal of Engineering Innovation and research, ISSN : 2230-9373, 2011\n\n
                            (4) Mishra Sambit Kumar, Pattnaik Srikanta(Dr.), Evaluation of gene value and heuristic function of alternate plans in multi database system using Genetic Algorithm, IJDMS Journal, ISSN : 0975-5985, 2011\n\n
                            (5) Mishra Sambit Kumar, Pattnaik Srikanta(Dr.), Pattnaik Dulu(Dr.), Retrieving Queries by Applying Join Selectivity along with Various Join Mechanisms Using Soft Computing Approach, Journal of Computer Sciences and Applications, ISSN : 2328-7268, 2015.</string>
    <string name="pub8"> Prof. Santosh Kr. Rath, CSE </string>
    <string name="pub9">    (1) Rath Santosh Kumar, Bisoyee Biswajit, An Image retrieval system using spatial database, IJCSIT, ISSN : 0975-9646, 2010\n\n
                            (2) Rath Santosh Kumar, Jena Manobendu Keshari, Data Mining : a healthy tool for your information, IJCSIT, ISSN : 0975-9646, 2011\n\n
                            (3) Rath Santosh Kumar, Rephrasing Essentials of Object-oriented Programming based on Testing pre-requisites, International Journal of Computer Science and Information Technologies (IJCSIT), Volume-2(5), 2055-2059, 2011\n\n
                            (4) Rath Santosh Kumar, Clustering Algorithm: The key to unfold and Track Large Scale Network, IJCA, 2011\n\n
                            (5) Rath Santosh Kumar, Jena Manobendu, Clustering algorithm: Key to unfold and track large scale net, IPCSIT, 2011 </string>
    <string name="pub10"> Asst. Prof. Snigdha M Mohapatra (CSE) </string>
    <string name="pub11">   (1) Mohapatra Snigdha M., Mishra Pradipta K., A novel approach for confidence estimation using support vector machines, IJCA, ISSN : 0975-8887, 2014\n\n
                            (2) Mohapatra Snigdha M., Mishra Pradipta K., More accurate value prediction using neural methods, IJCST, ISSN : 2229-4333, 2013</string>
    <string name="ad17"> ADMISSION PROCEDURE - DIPLOMA </string>
    <string name="ad18"> Admission to 1st Semester Diploma course in Engineering:\n\n
                         The Diploma Entrance Test (DET)-2015 for admission to 1st Semester Diploma Courses in Engineering/ Technology, Lateral Admission of the State Candidates to 3rd Semester Diploma Engineering Courses and 1st semester/ 1st year Non-Engineering Diploma Courses will be conducted on 17.05.2015 (Sunday) at selected centers inside and outside the State.  </string>
    <string name="ad19"> ELIGIBILITY </string>
    <string name="ad20"> Admission to 1st Semester of Engineering / Technology :\n\n
                        (1) Pass in HSC examination conducted by BSE, Odisha/ 10th standard examination declared equivalent by BSE, Odisha and obtained at least 35% marks at the qualifying examination with pass in both Math &amp; Science subject.\n\n
                        (2) Age:Must have lower age is 16 years and no upper age limit.\n\n
                        (3) Reservation: Reservation under different categories will be applicable for Odisha State candidates only as per norms specified by Government of Odisha.\n\n
                        (4) Outside State Candidates: Outside State candidates fulfilling eligibility criteria are also eligible to appear in the Diploma Entrance Test for admission to 1st Semester of 3 year Diploma Engineering Courses against 15% seats reserved for them in Private Engineering Schools &amp; Polytechnics only. Outside State Candidates are not eligible for Lateral admission to 3rd Semester.\n\n
                            For more details please visit : www.detodisha.nic.in</string>
    <string name="ad21"> FEES </string>
    <string name="ad22"> The entire academic fee for an academic year (i.e. two semesters) is payable at the beginning of the academic year.\n\n
                         The Fee should be paid through a/c payee demand draft only in favour of the Institute.\n\n
                         The fee is according to the guidelines prescribed by the Government of Orissa.\n\n
                         The fee is according to the guidelines prescribed by the Government of Orissa and as fixed by Fee Structure Committee.\n\n </string>
</resources>