<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context=".academic">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:text="@string/a11"
            android:textColor="#ffee"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textAlignment="center"
            android:background="@drawable/custom_four"/>

        <ImageView
            android:layout_width="350dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/bputlogo"
            android:contentDescription="@string/todo22" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/design_button"
            android:padding="5dp"
            android:text="@string/a12"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="#ffffff" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:text="@string/a13"
            android:layout_marginTop="5dp"
            android:textColor="#ffee"
            android:textStyle="bold"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textAlignment="center"
            android:background="@drawable/custom_four"
            android:textSize="20sp" />
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/aicte"
            android:layout_marginStart="130dp"
            android:src="@drawable/aicte"
            android:layout_marginLeft="40dp"
            android:contentDescription="@string/todo23" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/a14"
            android:background="@drawable/custom_three"
            android:padding="15dp"
            android:textColor="#ffffff"
            android:textAlignment="center"
            android:textSize="20sp"
            />
        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/bput"
            android:layout_marginTop="5dp"
            android:layout_marginStart="130dp"
            android:layout_marginLeft="40dp"
            android:src="@drawable/bputlogo"
            android:contentDescription="@string/todo24" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/a15"
            android:background="@drawable/custom_three"
            android:layout_marginTop="5dp"
            android:padding="15dp"
            android:textColor="#ffffff"
            android:textAlignment="center"
            android:textSize="20sp"
            />
        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/vt"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="130dp"
            android:src="@drawable/vt"
            android:contentDescription="@string/todo25" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/a16"
            android:background="@drawable/custom_three"
            android:textSize="20sp"
            android:padding="15dp"
            android:textColor="#ffffff"
            android:layout_marginTop="5dp"
            android:textAlignment="center"
            />


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:text="@string/a17"
            android:layout_marginTop="5dp"
            android:textColor="#ffee"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:background="@drawable/custom_four"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/design_button"
            android:padding="5dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="#ffffff"
            android:text="@string/a19"
            />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:text="@string/a18"
            android:textColor="#ffee"
            android:textSize="20sp"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textAlignment="center"
            android:background="@drawable/custom_four"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/design_button"
            android:padding="5dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="#ffffff"
            android:text="@string/a20"
            />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:text="@string/a21"
            android:textColor="#ffee"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginTop="5dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:background="@drawable/custom_four"/>
        <TextView
            android:id="@+id/link1"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:text="@string/a22"
            android:autoLink="all"
            android:textColor="#0e30da"
            android:background="@drawable/design_button"
            android:textSize="20sp"
            android:layout_marginTop="5dp"
            android:linksClickable="true"
            android:textColorLink="#0e30da"
            android:textAlignment="center"
            android:clickable="true" android:focusable="true" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:id="@+id/link2"
            android:autoLink="all"
            android:background="@drawable/design_button"
            android:clickable="true"
            android:textSize="20sp"
            android:layout_marginTop="5dp"
            android:linksClickable="true"
            android:textColorLink="#0e30da"
            android:textColor="#0e30da"
            android:layout_marginBottom="5dp"
            android:textAlignment="center"
            android:text="@string/a23"
            android:focusable="true" />

    </LinearLayout>

</ScrollView>