<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_five"
    tools:context=".publications">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/publish"
            android:contentDescription="@string/todo31" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_three"
            android:padding="5dp"
            android:text="@string/pub"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:layout_margin="5dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/pub1"
            android:textColor="#ffffff"
            android:layout_margin="5dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_four"
            android:padding="5dp"
            android:text="@string/pub2"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:layout_margin="5dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:background="@drawable/custom_three"
            android:text="@string/pub3"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="#ffffff"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_four"
            android:padding="5dp"
            android:text="@string/pub4"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:layout_margin="5dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:background="@drawable/custom_three"
            android:text="@string/pub5"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="#ffffff"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_four"
            android:padding="5dp"
            android:text="@string/pub6"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:layout_margin="5dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:background="@drawable/custom_three"
            android:text="@string/pub7"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="#ffffff"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_four"
            android:padding="5dp"
            android:text="@string/pub8"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:layout_margin="5dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:background="@drawable/custom_three"
            android:text="@string/pub9"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="#ffffff"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_four"
            android:padding="5dp"
            android:text="@string/pub10"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:layout_margin="5dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:background="@drawable/custom_three"
            android:text="@string/pub11"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="#ffffff"
            />



    </LinearLayout>

</ScrollView>